<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chassis_control</name>
  <version>0.0.0</version>
  <description>Control package for the chassis of the autonomous vehicle, handling movement commands and motor control.</description>
  <maintainer email="tangjingfan@gmail.com">jingfan</maintainer>
  <license>MIT</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>serial</build_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend> 

  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
